argocd/manifests/infrastructure/cilium/cilium-gateway-tls.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway-tls
  namespace: kube-system
  annotations:
    external-dns.alpha.kubernetes.io/target: 10.11.11.139
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 10.11.11.139
  listeners:
    - name: tls-passthrough
      protocol: TLS
      port: 443
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - group: gateway.networking.k8s.io
            kind: TLSRoute
